# NasdaqTrade

./: .env  .gitignore  README.md  log_config.json  main.py  pyproject.toml  requirements.txt  utils.py
CANSLIM/: pickfinviz.py
NASDAQ_Trade/: main.py  utils.py
NASDAQ_Trade/NASDAQData230812/: ^IXIC.csv
NASDAQ_Trade/save/: seaborn_practice.py
Stock_Trade/: BuyingStock.xlsx  Institutional.py  Institutional02.py  calc_rs.py  courrent_annual.py  main.py  memo.md  test.py  test2.py  utils.py
Stock_Trade/CsvData240221/: BuyingStock.csv  BuyingStock.xlsx  Comprehensive.csv  CourrentAnnual.csv  PerfInst.csv  ~$BuyingStock.xlsx
Stock_Trade/save/: HistData.py  Institutional.py  Pickfinviz.py  ProcessHistData.py  ProcessVT.py  calc_rs.py  courrent_annual.py  excel_heatmap.py  zacks_scraping.py
src/NasdaqTrade/: main.py  utils.py
