[project]
name = "NasdaqTrade"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Riku Yamada", email = "96092291+RRRRRRR-777@users.noreply.github.com" }
]
dependencies = [
    "pandas>=2.2.3",
    "yfinance>=0.2.43",
    "matplotlib>=3.9.2",
    "mplfinance>=0.12.10b0",
    "seaborn>=0.13.2",
    "python-dotenv>=1.0.1",
    "isort>=5.13.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/NasdaqTrade"]
