[project]
name = "NasdaqTrade"
version = "1.0.0"
description = "Nasdaqのチャートをスクレイピングしその情報をもとに分析し Date, Adj Close, Performance, Volume, U/D, Totalの値とチャート情報を画像にして出力"
authors = [
    { name = "Riku Yamada", email = "96092291+RRRRRRR-777@users.noreply.github.com" }
]
dependencies = [
    "pandas>=2.2.3",
    "yfinance>=0.2.43",
    "matplotlib>=3.9.2",
    "mplfinance>=0.12.10b0",
    "seaborn>=0.13.2",
    "python-dotenv>=1.0.1",
]

readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "isort>=5.13.2",
    "icecream>=2.1.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/NasdaqTrade"]
